[project]
name = "checkhost_scraper"
version = "1.2.2"
description = "Scrape check-host.net check-report permalinks"
authors = [
    {name="chrisji"}
]
dependencies = [
    "requests~=2.32.3",
    "beautifulsoup4==4.11.2",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "coverage-badge==1.1.2",
    "pydantic==2.10.6",
    "selenium==4.29.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
